--- a/pet/src/main/resources/static/css/ownerprofile.css
+++ b/pet/src/main/resources/static/css/ownerprofile.css
@@ -1,7 +1,8 @@
 img {
-    width: 250px;
-    height: 250px;
-    border-radius: 2px;
+    width: 200px;
+    height: 200px;
+    border-radius: 25px;
+    margin-top: 10px;
 }
 
 .all-profile {
@@ -58,8 +59,10 @@ img {
 
 .all-profile>.photo>.clear>ul>li:nth-child(2) {}
 
-.cng {
-    margin-left: 30%;
+.ccc {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
 }
 
 .cng>.my-cng {
@@ -189,12 +192,31 @@ img {
     margin-left: 7%;
 }
 
-.my-cng>ul>.ad {
-    margin-left: 25%;
-    margin-top: 15%;
+.ad {
+    margin-left: 30%;
+    margin-top: 50px;
 }
 
-.my-cng>ul>.ad>a {
-    font-size: medium;
-    /* text-align: center; */
+.ad > button {
+    width: 75px;
+    height: 30px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1.4rem;
+}
+
+.ddd {
+    margin-left: 55%;
+    margin-top: -29px;
+}
+
+.resign_btn {
+    background: crimson;
+    width: 75px;
+    height: 30px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1.4rem;
 }
