--- a/pet/src/main/resources/static/css/reserve.css
+++ b/pet/src/main/resources/static/css/reserve.css
@@ -208,6 +208,7 @@ textarea {
     box-sizing: border-box;
     align-items: center;
     background: #fff;
+    justify-content: space-between;
 }
 
 .sitter-img {
@@ -219,16 +220,12 @@ textarea {
     background: #ccc;
 }
 
-.sitter-info {
+/*.sitter-info {
     flex: 2;
-}
+}*/
 
-.sitter-price {
-    font-size: 22px;
-    margin-top: 10px;
-    text-align: right;
-    font-weight: bold;
-    margin-right: 30px;
+.sitter-info p {
+    font-size:
 }
 
 .details-btn {
@@ -244,6 +241,11 @@ textarea {
     margin-top: 20px;
     font-size: 14px;
     color: #666;
+}
+
+img {
+    width: 75px;
+    height: 75px;
 }
 
 /* ---- 반응형 ---- */
