--- a/pet/src/main/resources/static/css/reservemodal.css
+++ b/pet/src/main/resources/static/css/reservemodal.css
@@ -35,7 +35,7 @@
 .sitter-big-img {
     width: 200px;
     height: 200px;
-    margin-top: 20px;
+    margin-top: 50px;
     border-radius: 50%;
     margin-right: 20px;
     background: #ccc;
@@ -44,10 +44,10 @@
 .sitter-introduce {
     display: flex;
     width: 1000px;
-    height: 300px;
     border: 1px solid black;
     border-radius: 10px;
     margin-top: 20px;
+    padding: 20px;
 }
 
 .sitter-paragraph {
