--- a/pet/src/main/resources/static/css/sitterprofile.css
+++ b/pet/src/main/resources/static/css/sitterprofile.css
@@ -1,7 +1,8 @@
 img {
-    width: 250px;
-    height: 250px;
-    border-radius: 2px;
+    width: 200px;
+    height: 200px;
+    border-radius: 25px;
+    margin-top: 10px;
 }
 
 .all-profile {
@@ -57,17 +58,11 @@ img {
 
 .all-profile>.photo>.clear>ul>li:nth-child(2) {}
 
-.cng {
-    margin-left: 30%;
+.ccc {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
 }
-
-
-
-/* .cng>.pw-cng {
-    font-size: large;
-    text-align: justify;
-    padding-bottom: 10px;
-} */
 
 .cng>.my-cng {
     font-size: large;
@@ -157,16 +152,37 @@ img {
     text-align: justify;
     font-size: smaller;
 }
-.my-cng>ul>.ad{
-    border: 1px solid;
-    border-radius: 3px;
-    width: 50px;
-    height: 30px;
-    margin-left: 25%;
-    margin-top: 15%;
-    text-align: center;
+
+.ddd {
+    width: 830px;
+    height: 120px;
 }
-.my-cng>ul>.ad>a{
-    font-size: medium;
-    /* text-align: center; */
+
+.ad{
+    margin-left: 30%;
+    margin-top: 50px;
+}
+
+.ad >button {
+    width: 75px;
+    height: 30px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1.4rem;
+}
+
+.eee {
+    margin-left: 55%;
+    margin-top: 324px;
+}
+
+.resign_btn {
+    background: crimson;
+    width: 75px;
+    height: 30px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1.4rem;
 }
