--- a/pet/src/main/resources/templates/modal/reservemodal.html
+++ b/pet/src/main/resources/templates/modal/reservemodal.html
@@ -6,28 +6,33 @@
         <div class="sitter-main">
             <div>
                 <div class="sitter-introduce">
-                    <img src="#" alt="" class="sitter-big-img">
+<!--                    <img src="#" alt="" class="sitter-big-img">-->
+                    <img id="modal-sitter-img" src="#" alt="시터 이미지" class="sitter-big-img">
+<!--                    <img th:src="@{${sitter.user.profileImageUrl}}" alt="시터 이미지" class="sitter-big-img">-->
                     <div>
                         <h2>자기소개</h2>
-                        <p class="paragraph">저 또한 처음 강아지를 입양할 때의 설렘과 기대, 불안이 있었던 초보 보호자였고, 내 강아지 문제에 대해 공부해 알고 고민했던 서투른 보호자였으며, 지금도 내 강아지와 어떻게 행복하게 지낼 수 있을지 고민하는 보호자입니다.</p>
-                        <p class="paragraph">이러한 보호자로서의 경험이 보호자님의 고민과 걱정에 공감할 수 있는 시선이자, 이제는 보호자님을 돕기 위한 관점이 되어서, 그리고 강아지와의 삶에 어려움을 겪고 계신 보호자님들과 반려견 사이에 교량이 되어, 보호자님과 강아지들이 함께 행복한 삶을 살 수 있는 솔루션을 제공해 드리고자 합니다.</p>
+                        <br/>
+                        <br/>
+                        <p class="paragraph sitter-presentation"></p>
+<!--                        <p class="paragraph">저 또한 처음 강아지를 입양할 때의 설렘과 기대, 불안이 있었던 초보 보호자였고, 내 강아지 문제에 대해 공부해 알고 고민했던 서투른 보호자였으며, 지금도 내 강아지와 어떻게 행복하게 지낼 수 있을지 고민하는 보호자입니다.</p>-->
+<!--                        <p class="paragraph">이러한 보호자로서의 경험이 보호자님의 고민과 걱정에 공감할 수 있는 시선이자, 이제는 보호자님을 돕기 위한 관점이 되어서, 그리고 강아지와의 삶에 어려움을 겪고 계신 보호자님들과 반려견 사이에 교량이 되어, 보호자님과 강아지들이 함께 행복한 삶을 살 수 있는 솔루션을 제공해 드리고자 합니다.</p>-->
                     </div>
                 </div>
-                <div class="sitter-paragraph">
-                    <h2>교육 스타일</h2>
-                    <p class="paragraph">먼저 보호자님과 강아지의 생활 환경, 보호자님이 가지고 계신 생활 습관, 이를 이해하는 것부터 시작합니다.</p>
-                    <p class="paragraph">이후 강아지의 문제 행동이 실제로 보호자님이 이해하실 수 있도록 쉽게 설명해 드립니다.</p>
-                    <p class="paragraph">그리고 보호자님이 능숙하게 강아지를 대하실 수 있도록 도와드립니다.</p>
-                    <p class="paragraph">그렇기에 강아지에 대한 교육보다 보호자님에 대한 교육이 먼저가 된 것이며, 보호자님이 최대한 쉽게 이해하실 수 있도록 도와드립니다.</p>
-                    <h2>전문 분야</h2>
-                    <p class="paragraph">퍼피 트레이닝, 예절교육, 사회화 교육과 함께 배변, 산책, 짖음, 공격성 등 보호자의 성향이나 생활 환경, 강아지에게 처해진 환경 등 원인을 파악하며 문제들을 보호자님과 함께 풀어나가게 될 것입니다.</p>
-                    <h2>교육 진행 순서</h2>
-                    <p class="paragraph">우선 교육을 시작하기 전, 보호자님과 강아지가 교육을 받을 준비를 하는 것이 중요합니다. 보호자님이 생각하시는 문제 원인이 문제의 원인이 아닌 경우도 많고, 문제의 요인이 아닌 단순한 배변실수일 수 있고, 강아지가 느끼는 불안이 먼저 해결돼야 할 수도 있습니다.</p>
-                    <p class="paragraph">그래서 보호자님과 이야기를 나누며 진짜 원인이 무엇인지 알아가고, 보호자님이 걱정하는 부분들이 정말 교육이 필요한 부분인지 함께 생각해보는 것이 중요하리라 생각됩니다.</p>
-                    <p class="paragraph">방문 시, 강아지가 불안함을 느끼지 않도록 저와의 첫 만남에, 하루가 침착하게 인식하도록 시범 강아지와 함께 강아지가 두려움을 느끼지 않도록 제가 먼저 인사하고 탐색하는 시간을 가질 것입니다.</p>
-                    <p class="paragraph">강아지의 불안감이 해소된 이후, 강아지에 대한 평가와 보호자님의 고민을 함께 나누며 교육을 진행합니다.</p>
-                    <p class="paragraph">교육 시, 보호자의 습관 개선 고민, 보호자님과 강아지가 처한 환경과 생활, 보호자님의 생각 등을 함께 나누며 실질적이고 보호자님의 생활에 적용 가능한 방식으로 교육이 진행될 수 있도록 지속적으로 피드백 드리겠습니다.</p>
-                </div>
+<!--                <div class="sitter-paragraph">-->
+<!--                    <h2>교육 스타일</h2>-->
+<!--                    <p class="paragraph">먼저 보호자님과 강아지의 생활 환경, 보호자님이 가지고 계신 생활 습관, 이를 이해하는 것부터 시작합니다.</p>-->
+<!--                    <p class="paragraph">이후 강아지의 문제 행동이 실제로 보호자님이 이해하실 수 있도록 쉽게 설명해 드립니다.</p>-->
+<!--                    <p class="paragraph">그리고 보호자님이 능숙하게 강아지를 대하실 수 있도록 도와드립니다.</p>-->
+<!--                    <p class="paragraph">그렇기에 강아지에 대한 교육보다 보호자님에 대한 교육이 먼저가 된 것이며, 보호자님이 최대한 쉽게 이해하실 수 있도록 도와드립니다.</p>-->
+<!--                    <h2>전문 분야</h2>-->
+<!--                    <p class="paragraph">퍼피 트레이닝, 예절교육, 사회화 교육과 함께 배변, 산책, 짖음, 공격성 등 보호자의 성향이나 생활 환경, 강아지에게 처해진 환경 등 원인을 파악하며 문제들을 보호자님과 함께 풀어나가게 될 것입니다.</p>-->
+<!--                    <h2>교육 진행 순서</h2>-->
+<!--                    <p class="paragraph">우선 교육을 시작하기 전, 보호자님과 강아지가 교육을 받을 준비를 하는 것이 중요합니다. 보호자님이 생각하시는 문제 원인이 문제의 원인이 아닌 경우도 많고, 문제의 요인이 아닌 단순한 배변실수일 수 있고, 강아지가 느끼는 불안이 먼저 해결돼야 할 수도 있습니다.</p>-->
+<!--                    <p class="paragraph">그래서 보호자님과 이야기를 나누며 진짜 원인이 무엇인지 알아가고, 보호자님이 걱정하는 부분들이 정말 교육이 필요한 부분인지 함께 생각해보는 것이 중요하리라 생각됩니다.</p>-->
+<!--                    <p class="paragraph">방문 시, 강아지가 불안함을 느끼지 않도록 저와의 첫 만남에, 하루가 침착하게 인식하도록 시범 강아지와 함께 강아지가 두려움을 느끼지 않도록 제가 먼저 인사하고 탐색하는 시간을 가질 것입니다.</p>-->
+<!--                    <p class="paragraph">강아지의 불안감이 해소된 이후, 강아지에 대한 평가와 보호자님의 고민을 함께 나누며 교육을 진행합니다.</p>-->
+<!--                    <p class="paragraph">교육 시, 보호자의 습관 개선 고민, 보호자님과 강아지가 처한 환경과 생활, 보호자님의 생각 등을 함께 나누며 실질적이고 보호자님의 생활에 적용 가능한 방식으로 교육이 진행될 수 있도록 지속적으로 피드백 드리겠습니다.</p>-->
+<!--                </div>-->
 <!--                <div class="id">-->
 <!--                    <div class="slider__btn">-->
 <!--                        <span class="prev" title="이전이미지">prev</span>-->
