--- a/pet/src/main/resources/templates/mypage/ownerprofile.html
+++ b/pet/src/main/resources/templates/mypage/ownerprofile.html
@@ -1,117 +1,79 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <!-- link -->
-    <script src="/js/link.js" defer></script>
-    <title>Document</title>
-    <!-- css -->
-    <link rel="stylesheet" th:href="@{/css/style.css}"/>
-    <link rel="stylesheet" th:href="@{/css/header.css}"/>
-    <link rel="stylesheet" th:href="@{/css/footer.css}"/>
-    <link rel="stylesheet" th:href="@{/css/ownerprofile.css}"/>
+<html lang="ko"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/temp}">
+<!-- title -->
+<th:block layout:fragment="title">
+    ownerprofile
+</th:block>
+
+<!-- css -->
+<th:block layout:fragment="css">
+    <link rel="stylesheet" href="/css/ownerprofile.css"/>
+</th:block>
+
+<!-- script -->
+<th:block layout:fragment="script">
     <!-- goole icon -->
     <link
             rel="stylesheet"
             href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
-</head>
+</th:block>
 
-<body>
-<div class="wrapper">
-    <!-- 헤더영역 (템플릿화 예정) -->
-    <div class="header">
-        <div class="logo">
-            <span><a href="#">LOGO</a></span>
-        </div>
-        <div class="menu">
+<!-- 작업 영역 -->
+<div class="content" layout:fragment="content">
+    <div class="all-profile">
+        <div class="care-prof">
             <ul>
-                <li class="menu-service">
-                    <a href="#">Service</a>
-                    <ul class="sub-menu">
-                        <li class="sub-item"><a href="#">Day Care</a></li>
-                        <li class="sub-item"><a href="#">Hotelling</a></li>
-                        <li class="sub-item"><a href="#">work with pet</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">place</a></li>
-                <li><a href="#">board</a></li>
+                <li>프로필 관리</li>
+                <li>원하는 정보를 수정할 수 있습니다.</li>
             </ul>
         </div>
-        <div class="sign">
-            <button class="sign-in btn">
-                <a href="/html/sign/login.html">로그인</a>
-            </button>
-            <button class="sign-up btn">
-                <a href="/html/sign/signup.html">회원가입</a>
-            </button>
-        </div>
-    </div>
-    <!-- 메인영역 -->
-    <div class="main">
-        <!-- pagew 1260px -->
-        <div class="pagew">
-            <!-- 작업 영역 -->
-            <div class="content">
-                <div class="all-profile">
-                    <div class="care-prof">
-                        <ul>
-                            <li>프로필 관리</li>
-                            <li>원하는 정보를 수정할 수 있습니다.</li>
-                        </ul>
-                    </div>
-                    <form th:action="@{/update/owner/{userId}(userId=${user.userId})}" method="post"
-                          enctype="multipart/form-data">
-                        <div class="photo">
-                            <!-- <img th:src="@{${user.profileImageUrl}}" alt="프로필 이미지" /> -->
-                            <div class="clear">
-                                <ul>
-                                    <li>
-                                        <label>
-                                            사진 변경:
-                                            <input type="file" name="profileImage"/>
-                                        </label>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="cng">
-                            <div class="my-cng">
-                                <div class="na-cng">
-                                    <ul>
-                                        <li>이름 :</li>
-                                        <li><input type="text" name="name" th:value="${user.name}"/></li>
-                                    </ul>
-                                </div>
-                                <div class="loca">
-                                    <ul>
-                                        <li>주소 :</li>
-                                        <li><input type="text" name="address" th:value="${user.address}"/></li>
-                                    </ul>
-                                </div>
-                                <div class="numb">
-                                    <ul>
-                                        <li>전화번호 :</li>
-                                        <li><input type="text" name="phone" th:value="${user.phone}"/></li>
-                                    </ul>
-                                </div>
-                                <ul>
-                                    <li class="ad">
-                                        <button type="submit">변경 완료</button>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </form>
+        <form class="ccc" th:action="@{/update/owner/{userId}(userId=${user.userId})}" method="post"
+              enctype="multipart/form-data">
+            <div class="photo">
+                <img th:src="@{${user.profileImageUrl}}" alt="프로필 이미지"/>
+                <div class="clear">
+                    <ul>
+                        <li>
+                            <label>
+                                <input type="file" name="profileImage"/>
+                            </label>
+                        </li>
+                    </ul>
                 </div>
             </div>
-        </div>
-    </div>
-    <!-- footer영역(템플릿화 예정) -->
-    <div class="footer">
-        <span>footer</span>
+            <div class="cng">
+                <div class="my-cng">
+                    <div class="na-cng">
+                        <ul>
+                            <li>이름 :</li>
+                            <li><input type="text" name="name" th:value="${user.name}"/></li>
+                        </ul>
+                    </div>
+                    <div class="loca">
+                        <ul>
+                            <li>주소 :</li>
+                            <li><input type="text" name="address" th:value="${user.address}"/></li>
+                        </ul>
+                    </div>
+                    <div class="numb">
+                        <ul>
+                            <li>전화번호 :</li>
+                            <li><input type="text" name="phone" th:value="${user.phone}"/></li>
+                        </ul>
+                    </div>
+                    <div class="ad">
+                        <button type="submit">변경 완료</button>
+                    </div>
+                </div>
+            </div>
+        </form>
+        <form class="ddd" th:action="@{/delete}" method="post">
+            <button type="submit" class="resign_btn">회원 탈퇴</button>
+        </form>
     </div>
 </div>
-</body>
 </html>
